# safe-experimentation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: experiment.yaml
configs/agents/: baseline.prompt.md  safe-aware.prompt.md
data/annotations/: airline.safe.yaml  retail.safe.yaml
data/selected_tasks/: airline.jsonl  retail.jsonl
outputs/reports/: paper.md  paper_examples.md  retail_regression_diagnostic.md  scope_binding_validation.md  statistical_analysis.md  tau2_reward_analysis.md
outputs/runs/20260425_105056/: report.md  results.json
outputs/runs/20260425_112848/: report.md  results.json
outputs/runs/20260426_140840/: report.md  results.json
outputs/runs/20260426_140931/: report.md  results.json
outputs/runs/20260426_172556__gpt-4.1/: report.md  results.json
scripts/: analyze_results.py  analyze_tau2_reward.py  clean_drafts.py  compare_runs.py  diagnose_retail.py  draft_annotations.py  enrich_paper_examples.py  explore_tasks.py  headline_gpt41.py  headline_numbers.py  lint_drafts.py  regen_selected_tasks.py  run_experiment.py  select_tasks.py  setup_tau3.py  t3_eval_poc.py  validate_annotations.py
src/safe_benchmark/: __init__.py  agent_runner.py  annotation_schema.py  reporting.py  task_loader.py  trace_schema.py
src/safe_benchmark/evaluators/: __init__.py  anchored_decisions.py  base.py  escalation.py  flow_integrity.py  scope.py  tau2_reward.py
tests/: test_annotation_schema.py  test_safe_evaluators.py  test_task_loader.py  test_tau2_reward.py
(+330 files in other folders)
